# opentyrian

./: .gitignore  CMakeLists.txt  Makefile  README  WASM.md  async-functions.json  opentyrian.js  opentyrian.wasm
.github/workflows/: demo.yml
rpm/: opentyrian.spec
src/: file.c  opentyr.c  varz.c
